# Sol_Snatcher

./: .env.example  DEPLOYMENT.md  PROJECT_STRUCTURE.md  README.md  docker-compose.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/solsnatcher/: FloatingWidgetActivity.kt  MainActivity.kt  SolSnatcherApplication.kt
android/app/src/main/java/com/solsnatcher/data/model/: Wallet.kt  (+2 more)
gui/: Dockerfile  nginx.conf  package.json
gui/public/: index.html  manifest.json  sw.js
gui/src/: App.css  App.tsx  types.ts
gui/src/assets/lottie/: profit.json  snipe.json
gui/src/components/: Controls.tsx  Dashboard.tsx  SystemOverview.tsx  WalletPanel.tsx
gui/src/services/: api.ts  notifications.ts
infra/: init.sql  nginx.conf
ios/SolSnatcher/SolSnatcher/: ContentView.swift  SolSnatcher.entitlements  SolSnatcherApp.swift
ios/SolSnatcher/SolSnatcher.xcodeproj/: project.pbxproj
ios/SolSnatcher/SolSnatcher/Models/: Wallet.swift
ios/SolSnatcher/SolSnatcher/Services/: APIService.swift
ios/SolSnatcher/SolSnatcher/ViewModels/: SolSnatcherViewModel.swift
ios/SolSnatcher/SolSnatcher/Views/: FloatingWidgetView.swift  SystemStatusCard.swift  WalletCard.swift
orchestrator/: Dockerfile  package.json
orchestrator/src/: api.ts  database.ts  executor.ts  filters.ts  index.ts  orchestrator.ts  prices.ts  push.ts  types.ts
scripts/: deploy.sh  generate-vapid-keys.js  setup-wallets.js
sol-exec/: Cargo.toml  Dockerfile
sol-exec/src/: lib.rs  main.rs
systemd/: sol-snatcher.service
wallets/: README.md  registry.json
(+11 files in other folders)
