[package]
name = "sol-exec"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.17"
solana-sdk = "1.17"
solana-program = "1.17"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
bs58 = "0.5"